--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ p{
     font-size: small;
 }
 .loader{
-    
     width: 100vw;
     height: 100vh;
     background-color: var(--bg-color);
@@ -209,7 +208,10 @@ button{
 .team-cards .card img{
     height: 50vh;
 }
-
+.blog-cards .card:hover{
+    transition: 0.5s;
+    transform: scale(1.1);
+}
 .ad-text{
     height: 70vh;
     background-color: var(--bg-color);
@@ -230,7 +232,34 @@ button{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    
 }
+.gallery .layer{
+    height: 0%;
+    background-image: linear-gradient(#404498ef,#343768f3);
+    color: white;
+    display: flex;
+    opacity: 0;
+    justify-content: center;
+    align-items: flex-end;
+    padding-bottom: 2rem;
+    transition: 1s;
+}
+.gallery .layer h6{
+    color: var(--btn-color);
+}
+.layerdata{
+    opacity: 0;
+}
+.gallery:hover .layer{
+    height: 100%;
+    opacity: 1;
+}
+.gallery:hover  .layerdata{
+    opacity: 1;
+    transition-delay: 0.5s;
+}
+
 .g1{
     background-image: url('./images/c1.jpg');
 }
@@ -255,6 +284,7 @@ button{
 .g8{
     background-image: url('./images/c8.jpg');
 }
+
 .address a{
     text-decoration: none;
     color: #6c757d;
@@ -327,6 +357,7 @@ footer .followus ul{
     color: var(--bg-color);
     font-size: 1.3rem;
 }
+
 .navlinksec{
     display: flex;
     justify-content: flex-end;
